--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -1,6 +1,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --btn:
 }
 
 @media (prefers-color-scheme: dark) {
@@ -34,6 +35,11 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+button {
+  background-color: #ffffff;
+  border: none;
 }
 
 @media (prefers-color-scheme: dark) {
