--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -27,6 +27,8 @@ body {
 
 * {
   font-size: 14px;
+  font-family: "Noto Sans JP", "Yu Gothic", "Meiryo", sans-serif;
+  font-weight: 700;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -40,6 +42,10 @@ a {
 button {
   background-color: #ffffff;
   border: none;
+}
+
+.top-btn {
+  padding: 4px 10px;
 }
 
 @media (prefers-color-scheme: dark) {
