スタイル調整

--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -21,6 +21,11 @@
     margin: 30px;
 }
 
+.menuBtn:hover {
+    background: #eee;
+    cursor: pointer;
+}
+
 .menuBtn {
     border: 1px solid;
     border-radius: 8px;
