3連複買えるようにした

--- a/frontend/src/styles/Vote.module.css
+++ b/frontend/src/styles/Vote.module.css
@@ -42,6 +42,11 @@
     background: #d2e2f7;
 }
 
+.disabled,
+.disabled:hover {
+    background: #ccc;
+}
+
 .voteListItem:first-child {
     border-top: 1px solid;
     /* 最初のアイテムには上部ボーダーを付けない */
