--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -4,16 +4,13 @@
   --btn:
 }
 
+/* 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
-    /* ダークモード無視 */
-    color-scheme: light !important;
-    background-color: white !important;
-    color: black !important;
   }
-}
+} */
 
 html,
 body {
