--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -12,6 +12,29 @@
   }
 } */
 
+/* モバイルでのテキストサイズ調整を無効にする */
+input,
+textarea {
+  -webkit-text-size-adjust: 100%;
+  /* iPhoneのキーボードによる拡大防止 */
+  font-size: 16px;
+  /* 必要に応じてフォントサイズを指定 */
+  line-height: 1.5;
+  /* 行間を調整して見やすくする */
+}
+
+/* 入力フィールドのズームを防ぐための追加のスタイル */
+html {
+  font-size: 16px;
+  /* HTMLのベースフォントサイズを指定 */
+}
+
+/* モバイル端末でのユーザーズームを制限する */
+meta[name="viewport"] {
+  content: "width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no";
+}
+
+
 html,
 body {
   max-width: 100vw;
@@ -27,7 +50,7 @@ body {
 }
 
 * {
-  font-size: 14px;
+  font-size: 16px;
   font-family: "Noto Sans JP", "Yu Gothic", "Meiryo", sans-serif;
   font-weight: 700;
   box-sizing: border-box;
