--- a/frontend/src/styles/Inquiry.module.css
+++ b/frontend/src/styles/Inquiry.module.css
@@ -12,7 +12,6 @@
 
 .menuBtn button {
     width: 90%;
-    border: 1px solid #171717;
     border-radius: 5px;
     background-color: rgb(131, 156, 220);
     padding: 10px 30px 10px 30px;
@@ -46,6 +45,20 @@
     background: red;
     color: white;
     padding: 3px;
+}
+
+.ticketItemDate {
+    grid-column-start: 2;
+    grid-column-end: 4;
+    color: rgb(166, 186, 237);
+}
+
+.ticketItemRace {
+    grid-column-start: 2;
+}
+
+.ticketItemTicketType {
+    grid-column-start: 2;
 }
 
 .ticketItemPayout {
